fix: header buttons overflows

--- a/homepage.css
+++ b/homepage.css
@@ -32,8 +32,6 @@ header {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--blue);
-    padding-bottom: 0.5%;
-    padding-top: 0.5%;
 }
 
 .contact-info {
@@ -171,14 +169,14 @@ header {
 .language-selector {
     width: 25%;
     margin-left: 1rem;
-    align-self: stretch;
+    height: 100%;
     display: flex;
 }
 
 .language-selector select {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     font-size: 1rem;
     width: 100%;
     align-self: flex-end;
